# xdress

./: .gitignore  MANIFEST.in  configure.py  license  setup.cfg  setup.py
docs/: Makefile  advtut.rst  authors.rst  conf.py  faq.rst  index.rst  libclang.rst  pushs3.sh  rcdocs.rst  tutorial.rst
docs/libref/: astparsers.rst  autoall.rst  autodescribe.rst  base.rst  cythongen.rst  descfilter.rst  doxygen.rst  dtypes.rst  extratypes.rst  index.rst  main.rst  pep8names.rst  plugins.rst  stlwrap.rst  typesystem.rst  utils.rst  version.rst
docs/mypack/: CMakeLists.txt  CMakeLists.txt.rst  index.rst  setup.py  setup.py.rst  xdressrc.py  xdressrc.py.rst
docs/mypack/cmake/: ReplicatePythonSourceTree.cmake
docs/mypack/mypack/: CMakeLists.txt  cpp_hoover.pxd  cpp_hoover.pxd.rst  cpp_hoover_b.pxd  cpp_hoover_b.pxd.rst  dtypes.pxd  dtypes.pxd.rst  dtypes.pyx  dtypes.pyx.rst  hoover.pxd  hoover.pxd.rst  hoover.pyx  hoover.pyx.rst  hoover_b.pxd  hoover_b.pxd.rst  hoover_b.pyx  hoover_b.pyx.rst  index.rst  mypack_extra_types.pxd  mypack_extra_types.pxd.rst  mypack_extra_types.pyx  mypack_extra_types.pyx.rst  stlcontainers.pxd  stlcontainers.pxd.rst  stlcontainers.pyx  stlcontainers.pyx.rst  xdress_extra_types.pxd  xdress_extra_types.pxd.rst  xdress_extra_types.pyx.rst
docs/mypack/mypack/tests/: index.rst  test_dtypes.py  test_dtypes.py.rst  test_stlcontainers.py  test_stlcontainers.py.rst
docs/mypack/src/: hoover.cpp  hoover.cpp.rst  hoover.h  hoover.h.rst  index.rst  xdress_extra_types.h  xdress_extra_types.h.rst
docs/other/: index.rst
docs/other/pycon2014/: abstract.rst  index.rst
docs/other/scipy2013/: abstract.rst  index.rst  tutorial_abstract.rst
docs/previous/: 0.1_release_notes.rst  0.2_release_notes.rst  0.3_release_notes.rst  0.4_release_notes.rst  index.rst
scripts/: xdress  xdress.bat
tests/: CMakeLists.txt  all.h  clean.sh  configure.py  reftypes.h  run-gdb.sh  run-gdb2.7.sh  run-gdb3.2.sh  run-gdb3.3.sh  run-ipy.sh  run-tests.sh  run-tests2.7.sh  run-tests3.2.sh  run.sh  run2.7.sh  run3.2.sh  run3.3.sh  setup.py  test_autoall.py  test_autodescribe.py  test_cppproj.py  test_cproj.py  test_descfilter.py  test_doxygen.py  test_pep8names.py  test_type_matching.py  test_typesystem.py  test_utils.py  toaster.h  tools.py  xdressrc.py
tests/cmake/: FindXdtest.cmake  ReplicatePythonSourceTree.cmake  XdtestMacros.cmake  logo.txt
tests/cppproj/: CMakeLists.txt  readme.rst  setup.py  xdressrc.py
tests/cppproj/cmake/: CppprojMacros.cmake
tests/cppproj/cppproj/: .gitignore  CMakeLists.txt
tests/cppproj/cppproj/tests/: test_basics.py  test_discovery.py  test_dt_more.py  test_pybasics.py
tests/cppproj/src/: CMakeLists.txt  basics.cpp  basics.h  basics.hpp  basics.py  discovery.cpp  discovery.h
tests/cproj/: CMakeLists.txt  readme.rst  setup.py  xdressrc.py
tests/cproj/cmake/: CprojMacros.cmake  ReplicatePythonSourceTree.cmake
tests/cproj/cproj/: CMakeLists.txt
tests/cproj/cproj/tests/: test_basics.py  test_discovery.py  test_pybasics.py
tests/cproj/src/: CMakeLists.txt  basics.c  basics.h  discovery.c  discovery.h
tests/gdb/: t.py  u.py
tests/src/: CMakeLists.txt  bright.cpp  bright.h  bright.py  bright_enrichment.cpp  bright_enrichment.h  bright_enrichment.py  device.c  device.h  device.py  enrichment_parameters.cpp  enrichment_parameters.h  enrichment_parameters.py  fccomp.cpp  fccomp.h  fccomp.py  reprocess.cpp  reprocess.h  reprocess.py
tests/xdtest/: CMakeLists.txt  new_inplace.h  typeconverters.pxd  typeconverters.pyx
xdress/: __init__.py  astparsers.py  autoall.py  autodescribe.py  base.py  cythongen.py  descfilter.py  doxygen.py  dtypes.py  extratypes.py  lazy_containers.py  main.py  pep8names.py  plugins.py  stlwrap.py  type_matching.py  typefilter.py  typesystem.py  typesystem_defaults.py  utils.py  version.py  xdress_extra_types.h  xdress_extra_types.pxd  xdress_extra_types.pyx
xdress/clang/: .gitignore  cindex.py  readme.rst  sync
xdress/clang/clang-c/: Index.h
xdress/clang/src/: CIndex.cpp  CIndexCXX.cpp  CIndexCodeCompletion.cpp  CIndexHigh.cpp  CIndexUSRs.cpp  CIndexer.h  CXComment.cpp  CXCompilationDatabase.cpp  CXCursor.cpp  CXCursor.h  CXLoadedDiagnostic.cpp  CXSourceLocation.cpp  CXType.cpp  CursorVisitor.h  IndexBody.cpp  IndexDecl.cpp  Indexing.cpp  IndexingContext.cpp  RecursiveASTVisitor.h  xdress-clang.cpp  xdress-clang.h  xdress.h
xdress/tests/: device.c  device.h  test_autodescribe.py  test_cythongen.py  test_descfilter.py  test_doxygen.py  test_typesystem.py  test_utils.py
xdress/type/: defaults.py  matching.py
xdress/types/: containers.py  defaults.py  matching.py  system.py
